--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ pom.xml.releaseBackup
 
 # Spring Boot
 *.log
+.env
+application-local.yml
+application-dev.yml
 
 # H2 local DB
 data/
@@ -25,12 +28,3 @@ data/
 # OS
 .DS_Store
 Thumbs.db
-
-${DATABASE_URL}=jdbc:postgresql://routine_db_0mre_user:4gnWMMBQQDnktFIaf8RIY6dWdTrMoHS9@dpg-d63dhbchg0os73cdj8f0-a/routine_db_0mre
-${DATABASE_PASSWORD}=4gnWMMBQQDnktFIaf8RIY6dWdTrMoHS9
-${DATABASE_USER}=routine_db_0mre_user
-${DATABASE_HOST}=dpg-d63dhbchg0os73cdj8f0-a
-${DATABASE_PORT}=5432
-${DATABASE_NAME}=routine_db_0mre
-${DATABASE_URL}=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
-${DATABASE_URL}=jdbc:postgresql://${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}
